fix: Java 8 兼容 - Spring Boot 2.7 + record移除 + List.of替换
- 降级 Spring Boot 3.3.4 → 2.7.18（Java 8 支持）
- 11个 record DTO → 普通 class（Java 8 不支持 record）
- jakarta.persistence → javax.persistence
- GenerationType.UUID → @GenericGenerator（Spring Boot 2.x JPA）
- List.of() → Arrays.asList()（Java 8 兼容）
- ModelConfigDto/GenerationTaskDto 加无参构造函数
- ModelConfigDto sampleModelConfigs() 拆分避免长行编码问题
- 添加 ModelConfigDto/GenerationTaskDto setters
- H2 Console 已启用（/h2-console）
- 后端验证通过：/api/health → {"success":true}